cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
project(READ)
find_package(OpenCV REQUIRED)
include_directories( ${OpenCV_INCLUDE_DIRS})
find_package(PCL 1.8 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})

add_definitions(${PCL_DEFINITIONS})

add_executable(read read.cpp)
add_executable(plane_detection plane_detection.cpp)
add_executable(project project.cpp)
add_executable(circle circle.cpp)
add_executable(imagecircle imagecircle.cpp)
add_executable(pinhole pinhole.cpp)

target_link_libraries(read ${PCL_LIBRARIES})
target_link_libraries(plane_detection ${PCL_LIBRARIES})
target_link_libraries(project ${PCL_LIBRARIES})
target_link_libraries(project ${OpenCV_LIBRARIES})
target_link_libraries(circle ${PCL_LIBRARIES})
target_link_libraries(imagecircle ${OpenCV_LIBRARIES})
target_link_libraries(pinhole ${PCL_LIBRARIES})